--- a/libelnet-template-theme/assets/css/main.css
+++ b/libelnet-template-theme/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,700&display=swap');
 /* IMPORTS
  ---------------------------------------------- */
 /*!
@@ -2929,6 +2930,155 @@ html {
     margin-left: auto !important;
   }
 }
+.carousel {
+  position: relative;
+}
+.carousel.pointer-event {
+  touch-action: pan-y;
+}
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.carousel-inner::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.carousel-item {
+  position: relative;
+  display: none;
+  float: left;
+  width: 100%;
+  margin-right: -100%;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+  .carousel-item {
+    transition: none;
+  }
+}
+.carousel-item.active, .carousel-item-next, .carousel-item-prev {
+  display: block;
+}
+.carousel-item-next:not(.carousel-item-left), .active.carousel-item-right {
+  transform: translateX(100%);
+}
+.carousel-item-prev:not(.carousel-item-right), .active.carousel-item-left {
+  transform: translateX(-100%);
+}
+.carousel-fade .carousel-item {
+  opacity: 0;
+  transition-property: opacity;
+  transform: none;
+}
+.carousel-fade .carousel-item.active, .carousel-fade .carousel-item-next.carousel-item-left, .carousel-fade .carousel-item-prev.carousel-item-right {
+  z-index: 1;
+  opacity: 1;
+}
+.carousel-fade .active.carousel-item-left, .carousel-fade .active.carousel-item-right {
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 0s 0.6s;
+}
+@media (prefers-reduced-motion: reduce) {
+  .carousel-fade .active.carousel-item-left, .carousel-fade .active.carousel-item-right {
+    transition: none;
+  }
+}
+.carousel-control-prev, .carousel-control-next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+  color: #fff;
+  text-align: center;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+@media (prefers-reduced-motion: reduce) {
+  .carousel-control-prev, .carousel-control-next {
+    transition: none;
+  }
+}
+.carousel-control-prev:hover, .carousel-control-next:hover, .carousel-control-prev:focus, .carousel-control-next:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: 0.9;
+}
+.carousel-control-prev {
+  left: 0;
+}
+.carousel-control-next {
+  right: 0;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: no-repeat 50% / 100% 100%;
+}
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  margin-right: 15%;
+  margin-left: 15%;
+  list-style: none;
+}
+.carousel-indicators li {
+  box-sizing: content-box;
+  flex: 0 1 auto;
+  width: 30px;
+  height: 3px;
+  margin-right: 3px;
+  margin-left: 3px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #fff;
+  background-clip: padding-box;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  opacity: 0.5;
+  transition: opacity 0.6s ease;
+}
+@media (prefers-reduced-motion: reduce) {
+  .carousel-indicators li {
+    transition: none;
+  }
+}
+.carousel-indicators .active {
+  opacity: 1;
+}
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+  text-align: center;
+}
 /* VARIABLES
  This template uses variables to reference colors, fonts, animations etc. To change the style of an element that has it's value given by a variable, please change the value here.
  ---------------------------------------------- */
@@ -2936,25 +3086,28 @@ html {
  All the default versions of text will be defined here
  ---------------------------------------------- */
 h1 {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
 }
 h2 {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 h3 {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 h4 {
-  font-family: serif;
+  font-family: 'Open Sans', sans-serif;
 }
 p {
-  font-family: serif;
+  font-family: 'Open Sans', sans-serif;
 }
 a {
-  font-family: serif;
+  font-family: 'Open Sans', sans-serif;
+  color: #4d4d4d;
+  font-weight: 600;
 }
 li {
-  font-family: serif;
+  font-family: 'Open Sans', sans-serif;
 }
 /* BODY & MAIN
  All changes directly on body and main go here
@@ -2964,43 +3117,310 @@ body, body > * {
   padding: 0;
 }
 main {
-  margin: 0;
+  margin: 50px 0 0 0;
   padding: 0;
+  min-height: 60vh;
+}
+/* CONTAINERS
+ Sizing of containers
+ ----------------------.------------------------ */
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 15px 0 15px;
 }
 /* HEADER
  Styling for elements within the header go here
  ---------------------------------------------- */
+header {
+  height: 90px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+}
+header .container {
+  height: 100%;
+}
+header .container .row {
+  height: 100%;
+}
+header .logo-container {
+  max-height: 100%;
+}
+header .logo-container img {
+  max-width: 100%;
+  max-height: 65px;
+  object-fit: contain;
+}
+header a {
+  font-size: 16px;
+  margin-top: 7.5px;
+  margin: 10px 5px 0px 5px;
+  transition: all 350ms ease-in;
+}
+header a:hover {
+  color: #2eb1ff !important;
+}
+header .btn-cta {
+  float: right;
+}
+header .navbar-toggler-icon i {
+  font-size: 30px;
+  color: #404040;
+}
+header .nav-logo-container {
+  width: 40%;
+  margin: auto;
+}
+header .nav-logo-container img {
+  max-width: 100%;
+  height: auto;
+}
+header .collapsing {
+  -webkit-transition: none;
+  transition: none;
+  display: none;
+}
 /* SHOWCASE/ LANDING-HERO
  Styling for a showcase or hero-section on the landing page goes here
  ---------------------------------------------- */
+.showcase {
+  width: 100%;
+  height: 450px;
+  overflow: hidden;
+  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../images/placeholder-banner.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.showcase .container {
+  margin-top: -25px;
+}
+.showcase .t-btn {
+  margin: 10px 15px 0px 0px;
+  padding: 10px 25px;
+}
+.showcase .t-btn a {
+  color: white;
+}
+.showcase .t-btn a:hover {
+  text-decoration: none;
+}
+.showcase img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.showcase h1 {
+  color: #fff;
+}
+.showcase p {
+  color: #fff;
+  font-weight: 600;
+}
 /* LANDING-PAGE
  Specific styling for the front/ landing page goes here (organized by section if possible)
  ---------------------------------------------- */
+.usp-container {
+  background: white;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+  padding: 30px 0;
+  position: relative;
+  border-radius: 10px;
+}
+.usp-container h4 {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+.usp-container .textwidget {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.usp-container .textwidget ul {
+  padding: 0;
+  text-align: left;
+  list-style: none;
+}
+.usp-container .textwidget ul i {
+  margin-right: 10px;
+  background: linear-gradient(307deg, rgba(52, 16, 159, 1) 0%, rgba(45, 63, 253, 1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.usp-container .textwidget .t-btn {
+  display: inline-block;
+  width: auto;
+  color: white;
+  background: linear-gradient(307deg, rgba(52, 16, 159, 1) 0%, rgba(45, 63, 253, 1) 100%);
+  padding: 7.5px 35px;
+}
+.usp-container .textwidget .t-btn:hover {
+  background: linear-gradient(307deg, #2a0d80 0%, #2433d6 100%);
+  box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.4);
+}
 /* PAGE-CONTENT
  Styling for content on website pages, except the homepage goes here (organized by section if possible)
  ---------------------------------------------- */
 /* BLOG-CONTENT
  Styling for blog posts and for blog-archives goes here (organized by section if possible)
  ---------------------------------------------- */
+.blog-container .post {
+  margin: 15px 0;
+}
+.blog-container .post .post-container {
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+  width: 95%;
+  margin: auto;
+}
+.blog-container .post .post-container .thumbnail-container img {
+  max-width: 100%;
+  height: auto;
+}
+.blog-container .post .post-container .card-content-container {
+  width: 90%;
+  margin: auto;
+  flex-direction: column;
+  padding: 20px 0px;
+}
+.blog-container .post .post-container .card-content-container h3 {
+  font-size: 23px;
+  font-weight: 600;
+}
+.blog-container .post .post-container .card-content-container button a {
+  color: white;
+  display: inline-block;
+  width: 100%;
+}
+.blog-container .post .post-container .card-content-container button a:hover {
+  text-decoration: none;
+}
 /* CUSTOM ELEMENTS
  All (site wide) custom elements' styling goes here
  ---------------------------------------------- */
+.t-btn {
+  display: inline-block;
+  width: auto;
+  padding: 7.5px 20px;
+  background: #5484ec;
+  color: #fff;
+  transition: all 200ms ease-out;
+  border: none;
+}
+.t-btn a {
+  color: white;
+}
+.t-btn:hover {
+  color: #fff !important;
+  text-decoration: none;
+  background: #2663e7;
+}
+.t-btn:hover a {
+  text-decoration: none;
+}
+.t-btn-primary {
+  background: linear-gradient(307deg, rgba(52, 16, 159, 1) 0%, rgba(45, 63, 253, 1) 100%);
+  padding: 15px 20px !important;
+}
+.t-btn-primary:hover {
+  background: linear-gradient(307deg, #2a0d80 0%, #2433d6 100%);
+  box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.4);
+}
+.t-btn-secondary {
+  background: none;
+  border: solid 2px white;
+  padding: 13px 18px !important;
+}
+.t-btn-secondary:hover {
+  background: white;
+}
+.t-btn-secondary:hover a {
+  color: #000 !important;
+}
+.btn-cta {
+  background: linear-gradient(307deg, rgba(52, 16, 159, 1) 0%, rgba(45, 63, 253, 1) 100%);
+}
+.btn-cta:hover {
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+  transform: scale(1.03);
+}
 /* FOOTER
  All styling for the footer goes here
  ---------------------------------------------- */
+footer {
+  background: #03081b;
+  padding: 40px 0;
+  margin-top: 50px;
+}
+footer h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  color: white;
+  font-weight: 600;
+}
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+footer ul li {
+  color: #bfbfbf;
+}
+footer ul li a {
+  color: #bfbfbf;
+}
+footer ul li a:hover {
+  color: #a6a6a6;
+}
+footer .socials-container {
+  text-align: center;
+}
+footer .socials-container a {
+  font-size: 30px;
+  margin: 15px;
+}
+footer .socials-container a i {
+  color: #bfbfbf;
+}
+footer .socials-container a:hover i {
+  color: #61c4ff;
+}
+footer .footer-right {
+  text-align: right;
+}
 /*
  ####################################################
  M E D I A  Q U E R I E S
  ####################################################
  */
 /*
- For the website template, building the site desktopfirst/ responsive is the default. Therefor media queries will use "max-width". If a site is to be build with a specific mobile design or mobile first, start working here and change the query t0 "min-width".
+ For the website template, building the site desktopfirst/ responsive is the default. Therefor the mixins used will use "media-breakpoint-down". If a site is to be build with a specific mobile design or mobile first, start working here and change the mixin to "media-breakpoint-up".
  */
 @media (max-width: 575.98px) {
 }
 @media (max-width: 767.98px) {
+  footer ul li {
+    text-align: center !important;
+  }
+  footer h4 {
+    text-align: center !important;
+  }
 }
 @media (max-width: 991.98px) {
+  #basicExampleNav {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    background: white;
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding-top: 150px;
+  }
+  .navbar-toggler {
+    z-index: 1001;
+    position: relative;
+  }
 }
 @media (max-width: 1199.98px) {
 }
