--- a/libelnet-template-theme/assets/scss/main.scss
+++ b/libelnet-template-theme/assets/scss/main.scss
@@ -6,105 +6,8 @@
 @import "..//bootstrap/scss/mixins";
 @import"..//bootstrap/scss/carousel";
 
-// Eventuele font-imports komen hier
-// Open Sans
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
-// Montserrat
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,700&display=swap');
-
-/* VARIABLES
-
-This template uses variables to reference colors, fonts, animations etc. To change the style of an element that has it's value given by a variable, please change the value here.
----------------------------------------------- */
-
-// ----- COLORS -----
-// Main Colors - Used for coloring elements, buttons, outlines and backgrounds
-$mainColor : rgb(84, 132, 236);
-$secondaryColor : #281263;
-$accentcolor: #61c4ff;
-
-// Gradients - if used
-$mainGradient: linear-gradient(307deg, rgba(52, 16, 159, 1) 0%, rgba(45, 63, 253, 1) 100%);
-$mainGradientH: linear-gradient(307deg, rgb(42, 13, 128) 0%, rgb(36, 51, 214) 100%);
-
-// Standard colors - Used as blacks & whites or lights and darks for text or hovers
-// Darkened
-$mainColorD : darken($color: $mainColor, $amount: 10%);
-$secondaryColorD : darken($color: $secondaryColor, $amount: 10%);
-$AccencolorD : darken($color: $accentcolor, $amount: 10%);
-// Lightened
-$mainColorL : lighten($color: $mainColor, $amount: 5%);
-$secondaryColor : lighten($color: $secondaryColor, $amount: 5%);
-$accentcolorL : lighten($color: $accentcolor, $amount: 5%);
-
-// Darks - black-like used for e.g. text
-$mainDark : #000000;
-$secondaryDark: #03081b;
-
-// Lights white-like used for e.g. text
-$mainLight : #ffffff;
-$secondaryLight : #ffffff;
-
-// Text colors - Standard colors for text, headings and links
-$headingColor-A : $mainDark;
-$headingColor-B : $mainLight;
-$subheadingColor : $secondaryDark;
-$paragraphColor-A : $mainDark;
-$paragraphColor-B : $mainLight;
-$linkColor : $accentcolor;
-$linkColorH : $AccencolorD;
-
-// ----- FONTS -----
-$mainHeading: 'Montserrat',
-sans-serif;
-$secondaryHeading: 'Open Sans',
-sans-serif;
-$paragraph: 'Open Sans',
-sans-serif;
-
-// ----- ANIMATIONS / TRANSITION PRESET -----
-$standardOut : all 350ms ease-out;
-$standardIn : all 350ms ease-in;
-$fastOut : all 200ms ease-out;
-$fastIn : all 200ms ease-in;
-$slowOut : all 500ms ease-out;
-$slowIn : all 500ms ease-out;
-
-
-/* TYPOGRAPHY
-
-All the default versions of text will be defined here
----------------------------------------------- */
-h1 {
-    font-family: $mainHeading;
-    font-weight: 800;
-}
-
-h2 {
-    font-family: $mainHeading;
-}
-
-h3 {
-    font-family: $mainHeading;
-}
-
-h4 {
-    font-family: $paragraph;
-}
-
-p {
-    font-family: $paragraph;
-}
-
-a {
-    font-family: $paragraph;
-    color: lighten($color: $paragraphColor-A, $amount: 30%);
-    font-weight: 600;
-}
-
-li {
-    font-family: $paragraph;
-}
+// Thema includes
+@import "./includes/variables";
 
 
 /* BODY & MAIN
@@ -118,9 +21,7 @@ body>* {
 }
 
 main {
-    margin: 50px 0 0 0;
     padding: 0;
-    min-height: 60vh;
 }
 
 
@@ -135,15 +36,6 @@ Styling for elements within the header go here
 ---------------------------------------------- */
 header {
     height: 90px;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
-
-    .container {
-        height: 100%;
-
-        .row {
-            height: 100%;
-        }
-    }
 
     .logo-container {
         max-height: 100%;
@@ -152,28 +44,6 @@ header {
             max-width: 100%;
             max-height: 65px;
             object-fit: contain;
-        }
-    }
-
-    a {
-        font-size: 16px;
-        margin-top: 7.5px;
-        margin: 10px 5px 0px 5px;
-        transition: $standardIn;
-
-        &:hover {
-            color: $linkColorH !important;
-        }
-    }
-
-    .btn-cta {
-        float: right;
-    }
-
-    .navbar-toggler-icon {
-        i {
-            font-size: 30px;
-            color: lighten($color: $paragraphColor-A, $amount: 25%);
         }
     }
 
@@ -187,20 +57,21 @@ header {
         }
     }
 
-    .collapsing {
-        // <-- Remove the default bootstrap animation for the mobile
+    .collapsing { // <-- Remove the default bootstrap animation for the mobile
         -webkit-transition: none;
         transition: none;
         display: none;
     }
-
 }
 
 /* SHOWCASE/ LANDING-HERO
 
 Styling for a showcase or hero-section on the landing page goes here
 ---------------------------------------------- */
-
+#showcase{
+    height: 50vh;
+    background: darkgray;
+}
 
 /* LANDING-PAGE
 
@@ -250,7 +121,9 @@ M E D I A  Q U E R I E S
 */
 
 // XS and smaller
-@include media-breakpoint-down(xs) {}
+@include media-breakpoint-down(xs) {
+
+}
 
 // SM and smaller
 @include media-breakpoint-down(sm) {
@@ -284,7 +157,11 @@ M E D I A  Q U E R I E S
 }
 
 // LG and smaller
-@include media-breakpoint-down(lg) {}
+@include media-breakpoint-down(lg) {
+
+}
 
 // XL and smaller
-@include media-breakpoint-down(xl) {}
+@include media-breakpoint-down(xl) {
+
+}
