--- a/libelnet-template-theme/assets/scss/main.scss
+++ b/libelnet-template-theme/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @import"..//bootstrap/scss/carousel";
 
 // Thema includes
-@import "./includes/variables";
+@import "../scss-includes/variables";
 
 
 /* BODY & MAIN
