--- a/libelnet-template-theme/assets/css/main.css
+++ b/libelnet-template-theme/assets/css/main.css
@@ -3129,6 +3129,9 @@ body, body > * {
   margin: 0;
   padding: 0;
 }
+body.no-scroll, body > *.no-scroll {
+  overflow: hidden !important;
+}
 main {
   padding: 0;
   margin: 50px 0;
